cotent-security | lang | meta description

--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -2,6 +2,7 @@
  * Mobirise v4 theme (https://mobirise.com/)
  * Copyright 2017 Mobirise
  */
+@charset "utf-8";
 body {
   font-style: normal;
   line-height: 1.5;
