--- a/assets/web/assets/mobirise-icons2/mobirise2.css
+++ b/assets/web/assets/mobirise-icons2/mobirise2.css
@@ -11,8 +11,8 @@
 }
 
 [class^="mobi-"], [class*=" mobi-"] {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'Moririse2' !important;
+  /* use to prevent issues with browser extensions that change fonts */
+  font-family: 'Moririse2';
   speak: none;
   font-style: normal;
   font-weight: normal;
